--- a/app/views/emails/create.js.erb
+++ b/app/views/emails/create.js.erb
@@ -1,2 +1,4 @@
 
+
 document.getElementById("emails").insertAdjacentHTML("beforeend", "<%= j render 'email', email: @email %>");
+//document.getElementByClassName("body-mail").hide();
